# study

./: .gitignore  README.md
docs/: outsystems_cursos.xlsx
python/config/: CONFIG_STEPS.md
python/esquenta/: condicionais.py  dicionarios.py  excecoes.py  funcoes.py  listas.py  meu_modulo.py  modulos.py  repeticao.py  tuplas.py  variaveis.py
python/fluente_python/: fluente-python.md  pyproject.toml
python/fluente_python/pense_python/: cap001.ipynb  pense-python.md  pyproject.toml
python/fluente_python/tutorial_python/: tutorial-python.md
python/projeto01/: app_lista_tarefa.py  modulo_terceiro.py  pyproject.toml
python/projeto01/config/: CONFIG_STEPS.md
python/projeto01/esquenta/: boleano.py  listas.py  numeros.py  ola_mundo.py  sintaxe.py  texto.py
python/projeto02/: decoradores.py  decoradores_comuns.py  jogo_turno.py
python/projeto03/: app.py  pyproject.toml  requirements.txt
python/projeto04/: app.py  pyproject.toml  requirements.txt
python/projeto04/model/: user.py
python/projeto04/test/: InsertUser.py
python/rock/projeto01/: app_lista_tarefa.py  pyproject.toml  teste.py
python/rock/projeto02/: heranca_multipla.py  jogo_turno.py  pilares_poo.py  poo.py  pyproject.toml
python/rock/projeto03/: README.md  api_doc.md  app.py  swagger.json  swagger.yaml
python/rock/projeto03/models/: task.py
python/rock/projeto03/test/: API Flask Tarefas.postman_collection.json  teste.py
python/rock/projeto04/: README.md  database.py  docker-compose.yml
python/rock/projeto04/instance/: database.db
python/rock/projeto04/model/: user.py
python/rock/projeto04/test/: API Flask Authentication.postman_collection.json
