[project]
name = "projeto03"
version = "0.1.0"
description = ""
authors = [
    {name = "Edy Epumuceno Rodrigues Junior",email = "edyjrdev@gmail.com"}
]
requires-python = "3.13.7"
dependencies = [
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-cors (>=6.0.2,<7.0.0)",
    "flask (==2.3.0)",
    "flasgger (>=0.9.7.1,<0.10.0.0)",
    "pytest (==7.4.3)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
