[project]
name = "projeto04"
version = "0.1.0"
description = ""
authors = [
    {name = "Edy Epumuceno Rodrigues Junior",email = "edyjrdev@gmail.com"}
]
requires-python = "3.13.7"
dependencies = [
    "flask (==2.3.0)",
    "flask-login (==0.6.2)",
    "flask-sqlalchemy (==3.1.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
