[project]
name = "projeto04"
version = "0.1.0"
description = ""
authors = [
    {name = "Edy Epumuceno Rodrigues Junior",email = "edyjrdev@gmail.com"}
]
requires-python = "3.13.3"
dependencies = [
    "flask (==2.3.0)",
    "flask-login (==0.6.2)",
    "flask-sqlalchemy (==3.1.1)",
    "werkzeug (==2.3.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pymysql (==1.1.0)",
    "cryptography (==41.0.7)",
    "bcrypt (==4.1.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
